# CourseProject

./: .gitattributes  .gitignore  ElasticSearch_import.py  Project Documentation - Documentation Search with Elasticsearch and GENRE.docx  Project usage.pptx  README.md  elastic_query.json  reference_link.txt  scraper-reference.py  split.py
code/: ElasticSearch_import.py  ElasticSearch_query.py  pyoracle.py  pyproject.toml  readme.md  reference_link.txt  scraper-reference.py
code/genre/: build_trie.py  convert_entries.py  demo.py  encoder_modified.json
