[tool.poetry]
name = "cs410"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
StackAPI = "^0.2.0"
beautifulsoup4 = "^4.10.0"
ratelimit = "^2.2.1"
selenium = "^4.0.0"
bs4 = "^0.0.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
elasticsearch = "^7.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
